WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213276
Text manipulation should not re-extract elements whose children have been manipulated
https://bugs.webkit.org/show_bug.cgi?id=213276
Summary
Text manipulation should not re-extract elements whose children have been man...
Wenson Hsieh
Reported
2020-06-16 17:15:06 PDT
<
rdar://problem/64193446
>
Attachments
Patch
(8.08 KB, patch)
2020-06-16 17:37 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-06-16 17:37:43 PDT
Created
attachment 402061
[details]
Patch
Wenson Hsieh
Comment 2
2020-06-16 18:17:55 PDT
Comment on
attachment 402061
[details]
Patch Thanks for the review!
EWS
Comment 3
2020-06-16 18:34:04 PDT
Committed
r263132
: <
https://trac.webkit.org/changeset/263132
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402061
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug